# harmonic

./: .clang-format  .clang-format.ci  .gitignore  Cargo.toml  LICENSE  README.md  debcraft.yaml  opencode.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
debian/: changelog  control  rules
include/: harmonic.h
launchpad/: harmonic-daily.recipe
plugin/: CMakeLists.txt  harmonicacp.cpp  harmonicacp.h  harmonicchatwidget.cpp  harmonicchatwidget.h  harmonicconfigpage.cpp  harmonicconfigpage.h  harmonicmarkdown.cpp  harmonicmarkdown.h  harmonicplugin.cpp  harmonicplugin.h  harmonicplugin.json  harmonicplugin.rc  harmonicview.cpp
plugin/build_review/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake
plugin/build_review/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
plugin/build_review/harmonicplugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
plugin/build_review/harmonicplugin_autogen/EWIEGA46WW/: moc_harmonicacp.cpp  moc_harmonicacp.cpp.d  moc_harmonicchatwidget.cpp  moc_harmonicchatwidget.cpp.d  moc_harmonicconfigpage.cpp  moc_harmonicconfigpage.cpp.d  moc_harmonicplugin.cpp  moc_harmonicplugin.cpp.d
plugin/build_review/harmonicplugin_autogen/include/: harmonicchatwidget.moc  harmonicchatwidget.moc.d  harmonicplugin.moc.d
plugin/tests/: test_harmonic_ffi.cpp
src/: engine.rs  lib.rs
