[package]
name = "harmonic"
version = "0.1.0"
edition = "2024"
description = "AI-assisted vibecoding plugin for Kate – Rust core library"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
